--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,28 @@
-version: '3'
+version: '3.9'
 
 services:
   wagtail:
-    image: beobgrp_site:0.2
+    build: .
     environment:
       WAGTAIL_DB_PASSWORD: ${WAGTAIL_DB_PASSWORD}
     ports:
-      - "8000:8000"
+      - "127.0.0.1:8000:8000"
     depends_on:
       - postgres
     networks:
       - wagtail_network
 
   postgres:
-    image: postgres:latest
+    image: postgres:14-alpine
     environment:
       POSTGRES_USER: wagtail
       POSTGRES_PASSWORD: ${WAGTAIL_DB_PASSWORD}
       POSTGRES_DB: beobgrp_site
-    ports:
-      - "5432:5432"
+    healthcheck:
+      test: [ "CMD", "pg_isready", "-U", "wagtail", "-d", "beobgrp_site" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     volumes:
       - /beobgrp_site/postgres:/var/lib/postgresql/data
     networks:
