--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,7 @@
+# Intellij
+/.idea/
+*.iml
+
 # Django project
 /media/
 /static/
@@ -14,7 +18,6 @@ __pycache__
 /Vagrantfile.local
 node_modules/
 /npm-debug.log
-/.idea/
 .vscode
 coverage
 .python-version
@@ -37,3 +40,9 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+
+# Ignore Docker related files
+Dockerfile
+
+# Ignore temporary files
+tmp*
