--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,9 @@ services:
     build: .
     environment:
       WAGTAIL_DB_PASSWORD: ${WAGTAIL_DB_PASSWORD}
+      SITE_INIT_MODE: ${SITE_INIT_MODE}
+    volumes:
+      - ${DJANGO_BACKUP_DIR}:/site_backup
     ports:
       - "127.0.0.1:8000:8000"
     depends_on:
@@ -21,9 +24,8 @@ services:
       POSTGRES_USER: wagtail
       POSTGRES_PASSWORD: ${WAGTAIL_DB_PASSWORD}
       POSTGRES_DB: beobgrp_site
-# Expose this port only for development / debug purposes!
-#    ports:
-#      - "127.0.0.1:54320:5432"
+    ports:
+      - "127.0.0.1:54320:5432"
     healthcheck:
       test: [ "CMD", "pg_isready", "-U", "wagtail", "-d", "beobgrp_site" ]
       interval: 10s
