--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Django>=5.1,<5.2
-wagtail>=6.3,<6.4
+Django==5.1.3
+wagtail==6.3
 psycopg2-binary>=2.9.9
 django-compressor==4.5.1
 django-sass-processor==1.4.1
