Improve README to describe how to configure new database. Some script and compose improvements.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     build: .
     environment:
       WAGTAIL_DB_PASSWORD: ${WAGTAIL_DB_PASSWORD}
-      SITE_INIT_MODE: ${SITE_INIT_MODE}
+      SITE_INIT_MODE: ${SITE_INIT_MODE:-"none"}
     volumes:
       - ${DJANGO_BACKUP_DIR}:/site_backup
       - internal_wagtail:/media
