Ignore node directory

--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,197 @@ venv/
 
 # Static files are collected by collectstatic
 /static/
+node_modules/bulma/bulma.scss
+node_modules/bulma/LICENSE
+node_modules/bulma/package.json
+node_modules/bulma/README.md
+node_modules/bulma/css/bulma.css
+node_modules/bulma/css/bulma.css.map
+node_modules/bulma/css/bulma.min.css
+node_modules/bulma/css/versions/bulma-no-dark-mode.css
+node_modules/bulma/css/versions/bulma-no-dark-mode.css.map
+node_modules/bulma/css/versions/bulma-no-dark-mode.min.css
+node_modules/bulma/css/versions/bulma-no-helpers-prefixed.css
+node_modules/bulma/css/versions/bulma-no-helpers-prefixed.css.map
+node_modules/bulma/css/versions/bulma-no-helpers-prefixed.min.css
+node_modules/bulma/css/versions/bulma-no-helpers.css
+node_modules/bulma/css/versions/bulma-no-helpers.css.map
+node_modules/bulma/css/versions/bulma-no-helpers.min.css
+node_modules/bulma/css/versions/bulma-prefixed.css
+node_modules/bulma/css/versions/bulma-prefixed.css.map
+node_modules/bulma/css/versions/bulma-prefixed.min.css
+node_modules/bulma/sass/_index.scss
+node_modules/bulma/sass/base/_index.scss
+node_modules/bulma/sass/base/animations.scss
+node_modules/bulma/sass/base/generic.scss
+node_modules/bulma/sass/base/minireset.scss
+node_modules/bulma/sass/base/skeleton.scss
+node_modules/bulma/sass/components/_index.scss
+node_modules/bulma/sass/components/breadcrumb.scss
+node_modules/bulma/sass/components/card.scss
+node_modules/bulma/sass/components/dropdown.scss
+node_modules/bulma/sass/components/menu.scss
+node_modules/bulma/sass/components/message.scss
+node_modules/bulma/sass/components/modal.scss
+node_modules/bulma/sass/components/navbar.scss
+node_modules/bulma/sass/components/pagination.scss
+node_modules/bulma/sass/components/panel.scss
+node_modules/bulma/sass/components/tabs.scss
+node_modules/bulma/sass/elements/_index.scss
+node_modules/bulma/sass/elements/block.scss
+node_modules/bulma/sass/elements/box.scss
+node_modules/bulma/sass/elements/button.scss
+node_modules/bulma/sass/elements/content.scss
+node_modules/bulma/sass/elements/delete.scss
+node_modules/bulma/sass/elements/icon.scss
+node_modules/bulma/sass/elements/image.scss
+node_modules/bulma/sass/elements/loader.scss
+node_modules/bulma/sass/elements/notification.scss
+node_modules/bulma/sass/elements/progress.scss
+node_modules/bulma/sass/elements/table.scss
+node_modules/bulma/sass/elements/tag.scss
+node_modules/bulma/sass/elements/title.scss
+node_modules/bulma/sass/form/_index.scss
+node_modules/bulma/sass/form/checkbox-radio.scss
+node_modules/bulma/sass/form/file.scss
+node_modules/bulma/sass/form/input-textarea.scss
+node_modules/bulma/sass/form/select.scss
+node_modules/bulma/sass/form/shared.scss
+node_modules/bulma/sass/form/tools.scss
+node_modules/bulma/sass/grid/_index.scss
+node_modules/bulma/sass/grid/columns.scss
+node_modules/bulma/sass/grid/grid.scss
+node_modules/bulma/sass/helpers/_index.scss
+node_modules/bulma/sass/helpers/aspect-ratio.scss
+node_modules/bulma/sass/helpers/border.scss
+node_modules/bulma/sass/helpers/color.scss
+node_modules/bulma/sass/helpers/flexbox.scss
+node_modules/bulma/sass/helpers/float.scss
+node_modules/bulma/sass/helpers/gap.scss
+node_modules/bulma/sass/helpers/other.scss
+node_modules/bulma/sass/helpers/overflow.scss
+node_modules/bulma/sass/helpers/position.scss
+node_modules/bulma/sass/helpers/spacing.scss
+node_modules/bulma/sass/helpers/typography.scss
+node_modules/bulma/sass/helpers/visibility.scss
+node_modules/bulma/sass/layout/_index.scss
+node_modules/bulma/sass/layout/container.scss
+node_modules/bulma/sass/layout/footer.scss
+node_modules/bulma/sass/layout/hero.scss
+node_modules/bulma/sass/layout/level.scss
+node_modules/bulma/sass/layout/media.scss
+node_modules/bulma/sass/layout/section.scss
+node_modules/bulma/sass/themes/_index.scss
+node_modules/bulma/sass/themes/dark.scss
+node_modules/bulma/sass/themes/light.scss
+node_modules/bulma/sass/themes/setup.scss
+node_modules/bulma/sass/utilities/_index.scss
+node_modules/bulma/sass/utilities/controls.scss
+node_modules/bulma/sass/utilities/css-variables.scss
+node_modules/bulma/sass/utilities/derived-variables.scss
+node_modules/bulma/sass/utilities/extends.scss
+node_modules/bulma/sass/utilities/functions.scss
+node_modules/bulma/sass/utilities/initial-variables.scss
+node_modules/bulma/sass/utilities/mixins.scss
+node_modules/bulma/versions/bulma-no-dark-mode.scss
+node_modules/bulma/versions/bulma-no-helpers-prefixed.scss
+node_modules/bulma/versions/bulma-no-helpers.scss
+node_modules/bulma/versions/bulma-prefixed.scss
+tmp/bulma-1.0.2.zip
+tmp/bulma/bulma.scss
+tmp/bulma/LICENSE
+tmp/bulma/package.json
+tmp/bulma/README.md
+tmp/bulma/css/bulma.css
+tmp/bulma/css/bulma.css.map
+tmp/bulma/css/bulma.min.css
+tmp/bulma/css/versions/bulma-no-dark-mode.css
+tmp/bulma/css/versions/bulma-no-dark-mode.css.map
+tmp/bulma/css/versions/bulma-no-dark-mode.min.css
+tmp/bulma/css/versions/bulma-no-helpers-prefixed.css
+tmp/bulma/css/versions/bulma-no-helpers-prefixed.css.map
+tmp/bulma/css/versions/bulma-no-helpers-prefixed.min.css
+tmp/bulma/css/versions/bulma-no-helpers.css
+tmp/bulma/css/versions/bulma-no-helpers.css.map
+tmp/bulma/css/versions/bulma-no-helpers.min.css
+tmp/bulma/css/versions/bulma-prefixed.min.css
+tmp/bulma/css/versions/bulma-prefixed.min.css.map
+tmp/bulma/css/versions/bulma-prefixed.min.min.css
+tmp/bulma/sass/_index.scss
+tmp/bulma/sass/base/_index.scss
+tmp/bulma/sass/base/animations.scss
+tmp/bulma/sass/base/generic.scss
+tmp/bulma/sass/base/minireset.scss
+tmp/bulma/sass/base/skeleton.scss
+tmp/bulma/sass/components/_index.scss
+tmp/bulma/sass/components/breadcrumb.scss
+tmp/bulma/sass/components/card.scss
+tmp/bulma/sass/components/dropdown.scss
+tmp/bulma/sass/components/menu.scss
+tmp/bulma/sass/components/message.scss
+tmp/bulma/sass/components/modal.scss
+tmp/bulma/sass/components/navbar.scss
+tmp/bulma/sass/components/pagination.scss
+tmp/bulma/sass/components/panel.scss
+tmp/bulma/sass/components/tabs.scss
+tmp/bulma/sass/elements/_index.scss
+tmp/bulma/sass/elements/block.scss
+tmp/bulma/sass/elements/box.scss
+tmp/bulma/sass/elements/button.scss
+tmp/bulma/sass/elements/content.scss
+tmp/bulma/sass/elements/delete.scss
+tmp/bulma/sass/elements/icon.scss
+tmp/bulma/sass/elements/image.scss
+tmp/bulma/sass/elements/loader.scss
+tmp/bulma/sass/elements/notification.scss
+tmp/bulma/sass/elements/progress.scss
+tmp/bulma/sass/elements/table.scss
+tmp/bulma/sass/elements/tag.scss
+tmp/bulma/sass/elements/title.scss
+tmp/bulma/sass/form/_index.scss
+tmp/bulma/sass/form/checkbox-radio.scss
+tmp/bulma/sass/form/file.scss
+tmp/bulma/sass/form/input-textarea.scss
+tmp/bulma/sass/form/select.scss
+tmp/bulma/sass/form/shared.scss
+tmp/bulma/sass/form/tools.scss
+tmp/bulma/sass/grid/_index.scss
+tmp/bulma/sass/grid/columns.scss
+tmp/bulma/sass/grid/grid.scss
+tmp/bulma/sass/helpers/_index.scss
+tmp/bulma/sass/helpers/aspect-ratio.scss
+tmp/bulma/sass/helpers/border.scss
+tmp/bulma/sass/helpers/color.scss
+tmp/bulma/sass/helpers/flexbox.scss
+tmp/bulma/sass/helpers/float.scss
+tmp/bulma/sass/helpers/gap.scss
+tmp/bulma/sass/helpers/other.scss
+tmp/bulma/sass/helpers/overflow.scss
+tmp/bulma/sass/helpers/position.scss
+tmp/bulma/sass/helpers/spacing.scss
+tmp/bulma/sass/helpers/typography.scss
+tmp/bulma/sass/helpers/visibility.scss
+tmp/bulma/sass/layout/_index.scss
+tmp/bulma/sass/layout/container.scss
+tmp/bulma/sass/layout/footer.scss
+tmp/bulma/sass/layout/hero.scss
+tmp/bulma/sass/layout/level.scss
+tmp/bulma/sass/layout/media.scss
+tmp/bulma/sass/layout/section.scss
+tmp/bulma/sass/themes/_index.scss
+tmp/bulma/sass/themes/dark.scss
+tmp/bulma/sass/themes/light.scss
+tmp/bulma/sass/themes/setup.scss
+tmp/bulma/sass/utilities/_index.scss
+tmp/bulma/sass/utilities/controls.scss
+tmp/bulma/sass/utilities/css-variables.scss
+tmp/bulma/sass/utilities/derived-variables.scss
+tmp/bulma/sass/utilities/extends.scss
+tmp/bulma/sass/utilities/functions.scss
+tmp/bulma/sass/utilities/initial-variables.scss
+tmp/bulma/sass/utilities/mixins.scss
+tmp/bulma/versions/bulma-no-dark-mode.scss
+tmp/bulma/versions/bulma-no-helpers-prefixed.scss
+tmp/bulma/versions/bulma-no-helpers.scss
+tmp/bulma/versions/bulma-prefixed.scss
+package-lock.json
