--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [        
         {
-            "name": "Python Debugger: Django",
+            "name" : "Run Django Server",
             "type": "debugpy",
             "request": "launch",
             "args": [
