Clearly distinghuish between dev and prod images

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,11 @@ volumes:
 
 services:
   wagtail_prod:
-    image: beobgrp_site:1.2.2
-    build: .
+    image: beobgrp_site:1.2.2-prod
+    build:
+      context: .
+      args:
+        DEVELOPMENT: "false"
     environment:
       WAGTAIL_DB_PASSWORD: ${WAGTAIL_DB_PASSWORD}
       PGPASSWORD: ${WAGTAIL_DB_PASSWORD}
@@ -32,8 +35,11 @@ services:
       - prod
 
   wagtail_dev:
-    image: beobgrp_site:1.2.2
-    build: .
+    image: beobgrp_site:1.2.2-dev
+    build:
+      context: .
+      args:
+        DEVELOPMENT: "true"
     environment:
       WAGTAIL_DB_PASSWORD: ${WAGTAIL_DB_PASSWORD}
       PGPASSWORD: ${WAGTAIL_DB_PASSWORD}
