--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ volumes:
 
 services:
   wagtail_prod:
-    image: ${DOCKER_REGISTRY:-localhost:5000}/beobgrp_site:${VERSION_PROD}-prod
+    image: ${DOCKER_REGISTRY:-localhost:5000}/beobgrp_site:${VERSION_PROD}
     environment:
       WAGTAIL_DB_PASSWORD: ${WAGTAIL_DB_PASSWORD}
       PGPASSWORD: ${WAGTAIL_DB_PASSWORD}
@@ -31,7 +31,7 @@ services:
       - prod
 
   wagtail_dev:
-    image: ${DOCKER_REGISTRY:-localhost:5000}/beobgrp_site:${VERSION_DEV}-dev
+    image: ${DOCKER_REGISTRY:-localhost:5000}/beobgrp_site:${VERSION_DEV}
     environment:
       WAGTAIL_DB_PASSWORD: ${WAGTAIL_DB_PASSWORD}
       PGPASSWORD: ${WAGTAIL_DB_PASSWORD}
