--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ volumes:
   internal_wagtail_dev: {}
 
 services:
-  wagtail_prod:
+  wagtail:
     image: ${DOCKER_REGISTRY:-localhost:5000}/beobgrp_site:${VERSION_PROD}
     environment:
       WAGTAIL_DB_PASSWORD: ${WAGTAIL_DB_PASSWORD}
@@ -15,14 +15,14 @@ services:
       SECRET_KEY: ${SECRET_KEY}
       DJANGO_SECURE_SSL_REDIRECT: ${DJANGO_SECURE_SSL_REDIRECT:-"false"}
       WAGTAIL_PORT: 8000
-      WAGTAIL_DB_HOST: postgres_prod
+      WAGTAIL_DB_HOST: postgres
     volumes:
       - ${DJANGO_BACKUP_DIR}:/site_backup
       - internal_wagtail_prod:/media
     ports:
       - "127.0.0.1:8000:8000"
     depends_on:
-      postgres_prod:
+      postgres:
         condition: service_healthy
     restart: unless-stopped
     networks:
@@ -55,7 +55,7 @@ services:
     profiles:
       - dev
 
-  postgres_prod:
+  postgres:
     image: postgres:16-alpine
     environment:
       POSTGRES_USER: wagtail
