49 introduce simple deployment of a development site (#51)
* Introduce development docker compose configuration

* Clearly distinghuish between dev and prod images

* Move building to separate build and push script and explain about registry

* Improved and finalized the build_and_push.sh script and start_website.sh to provide all options and a version file.

* Build only a single docker image and just select particular versions when starting the website.

* Introduce restrictions on production/development builds (no production build or start from non-main branches)

* Both dev and prod servers should be set to production mode, since we are testing a production grade server.

* Make development server start the default when runnin on feature branch

* Create separate script to properly configure local registry + UI

* Updated TOC and add some sentences about the development environment

* Use IP instead of localhost to avoid Apache getting involved

* Make local registry optional, since it is not needed when building on the same computer as where the site runs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,23 @@
 volumes:
-  internal_postgres16: {}
-  internal_wagtail: {}
+  internal_postgres16_prod: {}
+  internal_postgres16_dev: {}
+  internal_wagtail_prod: {}
+  internal_wagtail_dev: {}
 
 services:
   wagtail:
-    image: beobgrp_site:1.2.2
-    build: .
+    image: ${DOCKER_REGISTRY:+$DOCKER_REGISTRY/}beobgrp_site:${VERSION_PROD}
     environment:
       WAGTAIL_DB_PASSWORD: ${WAGTAIL_DB_PASSWORD}
       PGPASSWORD: ${WAGTAIL_DB_PASSWORD}
       SITE_INIT_MODE: ${SITE_INIT_MODE:-"none"}
       SECRET_KEY: ${SECRET_KEY}
       DJANGO_SECURE_SSL_REDIRECT: ${DJANGO_SECURE_SSL_REDIRECT:-"false"}
+      WAGTAIL_PORT: 8000
+      WAGTAIL_DB_HOST: postgres
     volumes:
       - ${DJANGO_BACKUP_DIR}:/site_backup
-      - internal_wagtail:/media
+      - internal_wagtail_prod:/media
     ports:
       - "127.0.0.1:8000:8000"
     depends_on:
@@ -22,7 +25,33 @@ services:
         condition: service_healthy
     restart: unless-stopped
     networks:
-      - wagtail_network
+      - wagtail_network_prod
+    profiles:
+      - prod
+
+  wagtail_dev:
+    image: ${DOCKER_REGISTRY:+$DOCKER_REGISTRY/}beobgrp_site:${VERSION_DEV}
+    environment:
+      WAGTAIL_DB_PASSWORD: ${WAGTAIL_DB_PASSWORD}
+      PGPASSWORD: ${WAGTAIL_DB_PASSWORD}
+      SITE_INIT_MODE: ${SITE_INIT_MODE:-"none"}
+      SECRET_KEY: ${SECRET_KEY}
+      DJANGO_SECURE_SSL_REDIRECT: "false"
+      WAGTAIL_PORT: 8001
+      WAGTAIL_DB_HOST: postgres_dev
+    volumes:
+      - ${DJANGO_BACKUP_DIR}:/site_backup
+      - internal_wagtail_dev:/media
+    ports:
+      - "127.0.0.1:8001:8001"
+    depends_on:
+      postgres_dev:
+        condition: service_healthy
+    restart: unless-stopped
+    networks:
+      - wagtail_network_dev
+    profiles:
+      - dev
 
   postgres:
     image: postgres:16-alpine
@@ -38,10 +67,33 @@ services:
       timeout: 5s
       retries: 5
     volumes:
-      - internal_postgres16:/var/lib/postgresql/data
+      - internal_postgres16_prod:/var/lib/postgresql/data
     networks:
-      - wagtail_network
+      - wagtail_network_prod
+    profiles:
+      - prod
+
+  postgres_dev:
+    image: postgres:16-alpine
+    environment:
+      POSTGRES_USER: wagtail
+      POSTGRES_PASSWORD: ${WAGTAIL_DB_PASSWORD}
+      POSTGRES_DB: beobgrp_site
+    ports:
+      - "127.0.0.1:54321:5432"
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U wagtail" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    volumes:
+      - internal_postgres16_dev:/var/lib/postgresql/data
+    networks:
+      - wagtail_network_dev
+    profiles:
+      - dev
 
 networks:
-  wagtail_network:
+  wagtail_network_prod:
+  wagtail_network_dev:
 
